# brainsait-ocr

./: .dockerignore  .editorconfig  .env.example  .eslintrc.json  .gitignore  .npmrc  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_REVIEW_SUMMARY.md  CONTRIBUTING.md  Dockerfile  INSTALL.md  Makefile  README.md  SECURITY.md  brainsait_ocr_app.html  brainsait_ocr_backend.py  brainsait_ocr_requirements.txt  brainsait_ocr_setup.md  package-lock.json  package.json  pyproject.toml  schema.sql  wrangler.toml
.github/workflows/: ci-cd.yml  codeql.yml  publish-packages.yml
public/: index.html
public/app/: app.js  index.html
scripts/: deploy.sh  package.sh
src/: worker.js
src/routes/: auth.js  ocr.js  payment.js  rag.js  users.js
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_api_integration.py
tests/unit/: __init__.py  test_ocr_core.py
